Mon Apr 28 17:35:22 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_sequence.cpp:
        * TAO_IDL/be/be_visitor_sequence/sequence_ch.cpp:
        * TAO_IDL/be/be_visitor_sequence/sequence_cs.cpp:

          Changed generated code in several places to be "CORBA::OctetSeq"
          instead of "TAO_Unbounded_Sequence<CORBA::Octet>".

Mon Apr 28 18:59:01 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/POA/Generic_Servant/Makefile:
        * examples/POA/Generic_Servant/Makefile.client:
        * examples/POA/Generic_Servant/Makefile.generic_servant:
          Splitted original makefile into three, to resolve link problems with
          MinGW and Cygwin.

Mon Apr 28 12:24:39 2003  Irfan Pyarali  <irfan@oomworks.com>

	* tao\Strategies\advanced_resource.cpp:

	  load_default_protocols(): Reset
	  <TAO_Default_Resource_Factory::protocol_factories_> after
	  copying the protocols from it to avoid double deletes.

	  ~TAO_Advanced_Resource_Factory(): delete all protocols in
	  protocol factory to avoid memory leak.

	* tao\RTPortableServer\RT_POA.cpp (server_protocol):

	  Fixed code formatting.

	* tao\RTPortableServer\RT_Servant_Dispatcher.cpp:

	  Avoid a memory leak in pre_invoke_remote_request() by assigning
	  the result from POA::server_protocol() to a CORBA::Policy_var
	  instead of a CORBA::Policy_ptr.

	* tao\orbconf.h:

	  Only set TAO_DEFAULT_ROOTPOA_NAME if not already set by the
	  user.

Mon Apr 28 09:13:17 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* orbsvcs/orbsvcs/RTKokyuEvent.dsp: Added the xxx_BUILD_DLL
	  preprocessor definition to get rid of compile warnings on MSVC.

Mon Apr 28 07:05:55 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/PortableServer/PortableServerC.i (demarshal_value): Added
	  ACE_INLINE to marshal_value and demarshal_value. This should fix
	  link errors in MSVC6. Thanks to Simon McQueen for reporting this.
