@@ -44,6 +44,8 @@ be_home::be_home (UTL_ScopedName *n,
                   n_supports_flat,
                   I_FALSE,
                   I_FALSE),
+    be_type (AST_Decl::NT_home,
+             n),
     AST_Home (n,
               base_home,
               managed_component,
